fixed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  scrollbar-width: thin;
-}
-
 *::-webkit-scrollbar {
   @apply bg-transparent w-2;
 }
 
 *::-webkit-scrollbar-thumb {
-  @apply bg-secondary-dark rounded-full;
+  @apply bg-secondary-border rounded-full;
 }
 
 .scrollbar-hidden::-webkit-scrollbar-thumb {
